Ported Wingpanel to Granite.Application, remove log.vala, cardapio.vala, improved cmake scripts

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@ Copyright (c) 2011 by Wingpanel Developers
 Written by Wingpanel Developers:
 * Maxwell Barvian <maxwell@elementaryos.org>
 * ammonkey <am.monkeyd@gmail.com>
+* Giulio Collura <random.cpp@gmail.com>
