--- a/po/ca.po
+++ b/po/ca.po
@@ -1,4 +1,4 @@
-# Spanish translation for wingpanel
+# Catalan translation for wingpanel
 # Copyright (c) 2011 Rosetta Contributors and Canonical Ltd 2011
 # This file is distributed under the same license as the wingpanel package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2011.
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: wingpanel\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-11-03 22:32+0100\n"
-"PO-Revision-Date: 2011-12-13 04:37+0000\n"
-"Last-Translator: ttosttos <Unknown>\n"
-"Language-Team: Spanish <es@li.org>\n"
+"PO-Revision-Date: 2011-12-13 20:08+0000\n"
+"Last-Translator: Alfredo Hernández <Unknown>\n"
+"Language-Team: Catalan <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,4 +19,4 @@ msgstr ""
 
 #: /home/random/Projects/wingpanel/po/../src/Widgets/AppsButton.vala:36
 msgid "<b>Applications</b>"
-msgstr "<b>Aplicaciones</b>"
+msgstr "<b>Aplicacions</b>"
