Fix bug #920012 Source code still says 2011

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Copyright (c) 2011 by Wingpanel Developers
+Copyright (c) 2011-2012 by Wingpanel Developers
 
 Written by Wingpanel Developers:
 * Maxwell Barvian <maxwell@elementaryos.org>
