--- a/po/pl.po
+++ b/po/pl.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: wingpanel\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-11-03 22:32+0100\n"
-"PO-Revision-Date: 2012-01-12 09:55+0000\n"
-"Last-Translator: Adrian Widerski <Unknown>\n"
+"PO-Revision-Date: 2012-02-05 08:30+0000\n"
+"Last-Translator: Piotr Sokół <Unknown>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-01-13 05:04+0000\n"
-"X-Generator: Launchpad (build 14664)\n"
+"X-Launchpad-Export-Date: 2012-02-06 05:02+0000\n"
+"X-Generator: Launchpad (build 14747)\n"
 
 #: /home/random/Projects/wingpanel/po/../src/Widgets/AppsButton.vala:36
 msgid "<b>Applications</b>"
-msgstr "<b>Aplikacje</b>"
+msgstr "<b>Programy</b>"
