Updated Translation DB to reflect new translation string

--- a/po/fi.po
+++ b/po/fi.po
@@ -20,7 +20,7 @@ msgstr ""
 #: /home/fabian/dev/wingpanel/po/../src/Widgets/AppsButton.vala:36
 #, c-format
 msgid "Applications"
-msgstr ""
 
-#~ msgid "<b>Applications</b>"
-#~ msgstr "<b>Sovellukset</b>"
+
+
+msgstr "Sovellukset"
