--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -20,7 +20,7 @@ msgstr ""
 #: /home/fabian/dev/wingpanel/po/../src/Widgets/AppsButton.vala:36
 #, c-format
 msgid "Applications"
-msgstr ""
 
-#~ msgid "<b>Applications</b>"
-#~ msgstr "<b>應用程式</b>"
+
+
+msgstr "應用程式"
