--- a/po/fi.po
+++ b/po/fi.po
@@ -8,20 +8,17 @@ msgstr ""
 "Project-Id-Version: wingpanel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-06 22:41+0200\n"
-"PO-Revision-Date: 2012-02-25 13:37+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-05-07 20:01+0000\n"
+"Last-Translator: Fabian Thoma <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
-"Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-07 04:52+0000\n"
-"X-Generator: Launchpad (build 15195)\n"
+"X-Launchpad-Export-Date: 2012-05-08 05:22+0000\n"
+"X-Generator: Launchpad (build 15204)\n"
+"Language: fi\n"
 
 #: /home/fabian/dev/wingpanel/po/../src/Widgets/AppsButton.vala:36
 #, c-format
 msgid "Applications"
 msgstr "Sovellukset"
-
-#~ msgid "<b>Applications</b>"
-#~ msgstr "<b>Sovellukset</b>"
