--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,20 +8,17 @@ msgstr ""
 "Project-Id-Version: wingpanel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-06 22:41+0200\n"
-"PO-Revision-Date: 2012-02-13 04:35+0000\n"
-"Last-Translator: kevinchou <Unknown>\n"
+"PO-Revision-Date: 2012-05-07 19:57+0000\n"
+"Last-Translator: Fabian Thoma <Unknown>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-07 04:52+0000\n"
-"X-Generator: Launchpad (build 15195)\n"
+"X-Launchpad-Export-Date: 2012-05-08 05:22+0000\n"
+"X-Generator: Launchpad (build 15204)\n"
+"Language: \n"
 
 #: /home/fabian/dev/wingpanel/po/../src/Widgets/AppsButton.vala:36
 #, c-format
 msgid "Applications"
 msgstr "应用程序"
-
-#~ msgid "<b>Applications</b>"
-#~ msgstr "<b>应用程序</b>"
