--- a/po/ml.po
+++ b/po/ml.po
@@ -1,23 +1,23 @@
 # Malayalam translation for wingpanel
 # Copyright (c) 2012 Rosetta Contributors and Canonical Ltd 2012
 # This file is distributed under the same license as the wingpanel package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2012.
+# Jishnu Mohan <jishnu7@gmail.com>, 2012.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: wingpanel\n"
-"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
+"Report-Msgid-Bugs-To: Jishnu Mohan <jishnu7@gmail.com>\n"
 "POT-Creation-Date: 2012-05-06 22:41+0200\n"
-"PO-Revision-Date: 2012-06-22 05:25+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-06-25 16:54+0000\n"
+"Last-Translator: Jishnu Mohan <Unknown>\n"
 "Language-Team: Malayalam <ml@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-23 05:17+0000\n"
-"X-Generator: Launchpad (build 15461)\n"
+"X-Launchpad-Export-Date: 2012-06-26 05:39+0000\n"
+"X-Generator: Launchpad (build 15482)\n"
 
 #: /home/fabian/dev/wingpanel/po/../src/Widgets/AppsButton.vala:36
 #, c-format
 msgid "Applications"
-msgstr ""
+msgstr "പ്രയോഗങ്ങള്‍"
