--- a/po/gl.po
+++ b/po/gl.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: wingpanel\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-05-06 22:41+0200\n"
-"PO-Revision-Date: 2012-07-25 22:13+0000\n"
-"Last-Translator: Ignacio Prada <naccio.prada@facebook.com>\n"
+"PO-Revision-Date: 2012-10-10 10:10+0000\n"
+"Last-Translator: Miguel Anxo Bouzada <mbouzada@gmail.com>\n"
 "Language-Team: Galician <gl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-10-08 05:25+0000\n"
-"X-Generator: Launchpad (build 16061)\n"
+"X-Launchpad-Export-Date: 2012-10-11 05:24+0000\n"
+"X-Generator: Launchpad (build 16118)\n"
 
 #: /home/fabian/dev/wingpanel/po/../src/Widgets/AppsButton.vala:36
 #, c-format
 msgid "Applications"
-msgstr "Aplicacións"
+msgstr "Aplicativos"
