--- a/po/pl.po
+++ b/po/pl.po
@@ -8,17 +8,17 @@ msgstr ""
 "Project-Id-Version: wingpanel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-06 22:41+0200\n"
-"PO-Revision-Date: 2012-05-07 20:01+0000\n"
-"Last-Translator: Fabian Thoma <Unknown>\n"
+"PO-Revision-Date: 2012-11-02 09:05+0000\n"
+"Last-Translator: Adrian Widerski <Unknown>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-10-08 05:25+0000\n"
-"X-Generator: Launchpad (build 16061)\n"
+"X-Launchpad-Export-Date: 2012-11-03 05:23+0000\n"
+"X-Generator: Launchpad (build 16218)\n"
 "Language: pl\n"
 
 #: /home/fabian/dev/wingpanel/po/../src/Widgets/AppsButton.vala:36
 #, c-format
 msgid "Applications"
-msgstr "Programy"
+msgstr "Aplikacje"
