--- a/po/vi.po
+++ b/po/vi.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: wingpanel\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-05-06 22:41+0200\n"
-"PO-Revision-Date: 2012-12-16 14:15+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-01-27 06:25+0000\n"
+"Last-Translator: Anh Nguyen Tuan <anhnt@iworkteam.com>\n"
 "Language-Team: Vietnamese <vi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-12-17 05:00+0000\n"
-"X-Generator: Launchpad (build 16372)\n"
+"X-Launchpad-Export-Date: 2013-01-28 05:21+0000\n"
+"X-Generator: Launchpad (build 16451)\n"
 
 #: /home/fabian/dev/wingpanel/po/../src/Widgets/AppsButton.vala:36
 #, c-format
 msgid "Applications"
-msgstr ""
+msgstr "Ứng dụng"
