--- a/po/hi.po
+++ b/po/hi.po
@@ -8,17 +8,17 @@ msgstr ""
 "Project-Id-Version: wingpanel\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-06 22:41+0200\n"
-"PO-Revision-Date: 2012-05-07 20:01+0000\n"
-"Last-Translator: Fabian Thoma <Unknown>\n"
+"PO-Revision-Date: 2013-04-14 14:56+0000\n"
+"Last-Translator: Shubham Kanodia <shubhamsizzles@gmail.com>\n"
 "Language-Team: Hindi <hi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-17 05:01+0000\n"
-"X-Generator: Launchpad (build 16278)\n"
+"X-Launchpad-Export-Date: 2013-04-15 05:36+0000\n"
+"X-Generator: Launchpad (build 16564)\n"
 "Language: hi\n"
 
 #: /home/fabian/dev/wingpanel/po/../src/Widgets/AppsButton.vala:36
 #, c-format
 msgid "Applications"
-msgstr "अनुप्रयोग"
+msgstr "ऐप्लिकेशंस"
