--- a/po/id.po
+++ b/po/id.po
@@ -9,13 +9,13 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-06 22:41+0200\n"
 "PO-Revision-Date: 2012-05-06 21:42+0000\n"
-"Last-Translator: iman <Unknown>\n"
+"Last-Translator: Risman Rangga Pratama <Unknown>\n"
 "Language-Team: Indonesian <id@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-17 05:01+0000\n"
-"X-Generator: Launchpad (build 16278)\n"
+"X-Launchpad-Export-Date: 2013-05-14 05:39+0000\n"
+"X-Generator: Launchpad (build 16617)\n"
 "Language: id\n"
 
 #: /home/fabian/dev/wingpanel/po/../src/Widgets/AppsButton.vala:36
