--- a/po/sr.po
+++ b/po/sr.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: wingpanel\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-05-06 22:41+0200\n"
-"PO-Revision-Date: 2012-09-02 15:24+0000\n"
-"Last-Translator: Igor <Unknown>\n"
+"PO-Revision-Date: 2013-06-19 15:44+0000\n"
+"Last-Translator: IvanBlago <ivan_blagojevic@mail.com>\n"
 "Language-Team: Serbian <sr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-05-14 05:39+0000\n"
-"X-Generator: Launchpad (build 16617)\n"
+"X-Launchpad-Export-Date: 2013-06-20 05:42+0000\n"
+"X-Generator: Launchpad (build 16673)\n"
 
 #: /home/fabian/dev/wingpanel/po/../src/Widgets/AppsButton.vala:36
 #, c-format
 msgid "Applications"
-msgstr "Програми"
+msgstr "Апликације"
